[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-commit"        # name on PyPI
version = "0.1.0"
description = "A human-friendly git autocommit message generator"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Samuel", email = "olawoleolaniran@gmail.com" }
]
requires-python = ">=3.7"

[project.scripts]
autocomplete = "autocomplete.cli:main"
