[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocomplete-commit"        # name on PyPI
version = "0.1.2"
description = "A human-friendly git autocommit message generator"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Samuel", email = "olawoleolaniran@gmail.com" }
]
requires-python = ">=3.7"

[project.scripts]
aucommit = "autocomplete_commit.__main__:main"
